Updated testcases with error